--- a/DalesTruckMaintenance.Domain/DalesTruckMaintenance.Domain.csproj
+++ b/DalesTruckMaintenance.Domain/DalesTruckMaintenance.Domain.csproj
@@ -49,10 +49,16 @@
     <Compile Include="Customer.cs" />
     <Compile Include="CustomerService.cs" />
     <Compile Include="DTOs\CustomerDto.cs" />
+    <Compile Include="DTOs\UnitDto.cs" />
     <Compile Include="Exceptions\CustomerNotFoundException.cs" />
     <Compile Include="Exceptions\InvalidCustomerException.cs" />
+    <Compile Include="Exceptions\InvalidUnitException.cs" />
+    <Compile Include="Exceptions\UnitNotFoundException.cs" />
     <Compile Include="Interfaces\ICustomerRepository.cs" />
+    <Compile Include="Interfaces\IUnitRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Unit.cs" />
+    <Compile Include="UnitService.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
